framework/versions/1.4.0/GOVERNANCE.md
# 多 Agent 协作治理 v1.4.0

## 1. 适用模型

框架只有两层长期责任：**项目主控**与**领域分管**。用户或业务负责人持有产品目标与最终取舍，不计入内部管理层；执行者与独立审核者是主控或分管按任务挂载的临时角色，也不构成第三、第四层。

项目按实际需要定义领域并启用长期分管，例如设计、核心逻辑、视觉资产、渲染工程、平台发行或数据服务。领域名称不是固定组织图；没有稳定责任和近期任务时，不为填满角色而启动会话。

共同原则：

1. 项目权威文档和已验证代码是事实来源，聊天、摘要、归档和模型记忆只提供线索。
2. 一项任务只有一个写入负责人、一项与档位和风险相称的审核责任、一组精确文件所有权和一个 Git 收口者；`MICRO`可由owner自检承担审核责任，只有触发独立结论时才指定独立审核人。
3. 先建立事实、理论与影响范围，再设计、实现、验证；优先修根因，不以兼容分支掩盖错误抽象。
4. 方案、实现、审核、合入和运行验证是不同状态；测试通过不能单独证明设计正确或新增行为已覆盖。
5. 不覆盖、回退、暂存其他会话或用户的并行改动。
6. 所有发现都必须分类和路由，但不要求当前任务无限扩张去修复全部历史问题。
7. 面向用户的结论使用简体中文；术语、代码标识和命令可以保留原文并在首次出现时解释。

## 2. 角色与权限

| 角色 | 核心责任 | 默认批准权 | 禁止越位 |
|---|---|---|---|
| 主控 | 产品目标、阶段顺序、跨域接口、公共合同、资源与外部权限、冲突仲裁、中央当前态 | 路线与阶段、跨域/公共变更、领域争议；整理需用户决定的取舍 | 替分管拆日常任务、重复领域审核、同时指挥分管的执行者、长期承担领域实现 |
| 领域分管 | 长期掌握本域权威、current实现/证据、任务树与上下游；调查、讨论、拆卡、调度、返工和验收 | 已授权目标内的本域常规方案、范围、资源、审核与预授权本地Git；合格`MICRO`自检闭合及无独立触发条件的`STANDARD`聚焦审核 | 单方面改变产品目标、跨域公共合同、质量底线或其他领域所有权；实质写入后签发任务所需的独立批准 |
| 执行者（临时） | 在冻结范围内调查、实施、测试、自检，并向任务owner完整交接一次 | 无最终批准、路线、范围、Git或外部动作权 | 扩大范围、改变取舍、同时接受多个调度者、把自检当批准 |
| 独立审核者（临时） | 未参与候选实质写入，从权威与actual差异独立取证并给出审核结论 | 只有指定审核维度的结论权 | 调度任务、修改范围、默认写入或Git；实质修改后继续独自批准 |

主控与分管都可以直接工作，也都可以按需挂载执行者和独立审核者；“可以挂载”不等于每张任务必须新建两个角色。能力等级、模型和请求档位由项目配置；通用框架只要求按风险选择最低充分资源，资源不足或歧义上升时升级，不能靠降低证据门补偿。

## 3. 决策与问题路由

- 本域、可逆、无公共契约变化：领域分管自行闭环，主控只接收阶段所需摘要。
- 跨两个及以上领域、公共契约、路线/阶段门、不可逆风险或分管争议：分管先给证据，主控决定。
- 产品目标、商业取舍、重大删改、发布及其他需新授权的动作：主控整理选项与代价，用户决定。
- 外部状态动作逐级路由：只读盘点可由分管常规批准；下载、安装、接受许可协议、登录/绑定、创建或使用 AppID、设备授权、上传测试包、提审和正式发布分别记录授权。前一步不自动授权后一步，正式发布始终由用户决定。
- Bug 归属明确时由对应分管直接与用户讨论和闭环；归属不清或跨域时由主控指定唯一主owner。主控不得与分管同时调度同一执行者。
- 审核不是常驻独立部门。通常由分管审核；高风险、争议、连续复发或上下文污染时增加一次性独立审核。

## 4. 任务生命周期

```text
BACKLOG → READY → IN_PROGRESS → REVIEW → APPROVED → MERGED → VERIFIED → CLOSED
                           ↘ CHANGES_REQUESTED ↗
任意进行中状态 → BLOCKED / CANCELLED
```

工作强度由影响范围、行为复杂度、依赖数量、可观察性和失败代价共同决定：

- `MICRO`：单领域、低风险、可直接验证、无公共合同/持久状态/外部动作/并行owner冲突，且健康owner会话可在同一turn闭合。owner可直接执行；默认不建立临时执行者、独立审核者或完整任务卡。无持久卡时，当轮必须明确目标、exact/forbidden、验证、Git/外部权限和结果。跨turn、发生阻断或影响面扩大立即升级`STANDARD`。
- `STANDARD`：普通单领域功能、缺陷或跨turn工作。使用紧凑任务卡，至少保留目标/非目标、唯一owner、风险、exact/forbidden、验收、验证、Git/外部权限和唯一下一动作。独立审核按风险触发；actor、notifier和direct-loop字段只有实际挂载多角色时才启用。
- `CRITICAL`：跨域公共合同、复杂状态机、核心循环、持久状态、平台/runtime、账号/发布、不可逆动作或缺陷代价高。保留完整范围闭包、稳定审核对象、独立审核、完整范围摘要、证据有效键和外部生命周期门。actor/notifier等消息字段只由实际宿主适配按需增加，不是核心合同。

任何档位都只有一个owner，不得覆盖他人改动、跳过真实`HEAD`/index/diff、把自检冒充所需的独立批准，或扩大Git/外部授权。影响面、owner或风险不确定时向上升级，不能靠下调档位绕过门。

有持久任务卡时使用一行`范围摘要`。`MICRO / STANDARD`声明`profile`、`lifecycle`及具体`expected_paths/actual_paths`；`CRITICAL`额外保留`current_exact`。宿主适配只有在真实多会话协调需要时才追加actor/notifier，checker在字段存在时验证一致性，不要求平台无关任务虚构这些字段。1.3.0格式的`机械摘要`作为兼容输入，但不反向修改1.3.0。两个path字段以`|`分隔并用方括号包围workspace相对路径；统一slash与首尾空白后拒绝空项、重复项和规范化碰撞。`ACTIVE_WRITE`允许actual为expected已知子集但不得越界；`REVIEW`、已批准但仍active的`ACTIVE`和`CLOSED`要求集合相等。

AI会话在进入Review、Git收口或关闭前，从git status/diff或冻结manifest独立取得本任务actual，逐卡通过固定版本内`scripts/check-task-card.ps1 -ObservedActualPath`。checker只证明结构化声明、机器观察actual与生命周期字段一致；它不扫描仓库归属，不理解Git语义owner，不判断风险选择或设计正确，也不取得审核、Git、阶段或外部权限。`MICRO`无持久卡时不运行checker；无摘要legacy卡只标`LEGACY_UNCHECKED`，不触发库存迁移。

跨域目标默认由一个长期owner和一张父卡持有current写入线；领域输入优先作为父卡section、稳定消息或只读范围进入，不因涉及一个领域就机械建包。只有独立长期生命周期、独占owner字节、独立外部状态/权限、可单独关闭的交付物或必须独立保留的审核结论，才建独立领域卡，并写明必要性、父卡consumer和退出/归档条件。输入被父卡消费后立即关闭临时包；长期owner卡只保留稳定trigger/locator。该规则不削弱领域owner的方案、验收和必要独立审核权。

- `READY`：输入、权限和边界足够执行。
- `REVIEW`：执行者停止扩大修改，提交实际差异与证据。
- `APPROVED`：审核通过，但尚不等于已提交或运行验证。
- `VERIFIED`：合入后的规定测试/运行/视觉检查完成。

任务若在稳定内容提交后仍有独立外部发布、上传或远端状态，原卡保持在`active/`，机械生命周期用`ACTIVE`，并记录已批准内容提交与待完成外部动作；不得在外部结果前伪称`CLOSED`或归档。外部成功后记录真实branch/commit/tag/push等结果，再以同ID任务卡active→archive的closure提交关闭；失败或冲突则保持active并记录`BLOCKED`与真实外部状态。

## 5. 文件加载分层

首次进入项目/角色或恢复基线不可证明时，使用`FULL_COLD_RECOVERY`并从项目`BOOTSTRAP.md`开始完整恢复。恢复基线仍可证明的同一健康会话，可按`WARM_TASK_REBIND`只增量读取新任务卡、已变化权威与current/热索引、真实`HEAD`/index/actual状态、其他owner边界、重新授权的权限和唯一下一动作；温重绑不机械重复未变化的Bootstrap/固定Framework/项目全链。模式定义、失效与升级条件见§10，实际顺序见`WORKFLOW_PLAYBOOK.md`§1。

完整冷恢复时其余文件按职责与任务档位加载：

| 文件 | 主控 | 分管/审核人 | 执行者 |
|---|---|---|---|
| `GOVERNANCE.md` | 全文 | 全文 | 职责、任务、Git 章节 |
| `WORKFLOW_PLAYBOOK.md` | 相关章节 | 全文 | §0、档位与任务相关章节 |
| `REVIEW_CHECKLIST.md` | 阶段门相关章节 | 全文 | 按档位自检，不能冒充任务所需的独立批准 |
| `PERSPECTIVE_LENSES.md` | 跨域决策时 | 按任务选择 | 仅任务卡要求时 |
| 项目 `PROJECT/STATUS` | 全文 | 全文 | 相关部分 |
| 任务卡和其权威输入 | 相关任务 | 全文 | 全文 |

摘要只能做导航，不能替代任务卡指定的原文。

## 6. 风险、档位与审核深度

风险不只看行数，同时评估影响范围、行为复杂度、依赖数量和运行时可观察性。具体方法见 `REVIEW_CHECKLIST.md`。

- `MICRO`只允许四维均低且满足同turn、无外部动作等全部准入条件；owner自检并承担结果，不虚构独立批准。
- `STANDARD`覆盖普通低/中风险工作；按实际行为影响做直接测试和聚焦审核，可由领域owner审核或使用另一个合格上下文，不机械创建新会话。
- `CRITICAL`用于任一关键维度高或失败代价高的任务；方案先审，领域分管完整审核后按升级边界过主控阶段门。公共合同、跨域状态机、重大玩家体验或方案设计者高污染时，最终审核人必须与方案设计者和实质写入者不同。

独立审核按风险触发，不是常驻审批部门。它只拥有指定审核维度，没有默认写入权；承担独立审核的人若做了实质修改，必须由另一名合格审核者完成所需独立批准。该限制不妨碍`MICRO`由owner自检闭合，也不妨碍无独立触发条件的`STANDARD`由领域owner实施并做聚焦审核。

在决定实现与验证强度前，必须先判断问题是否能由当前生产链到达：

- `CURRENT_REACHABLE`：当前生产者、入口和生命周期能够实际到达，或已有真实trace/repro；按玩家与运行影响选择直接、集成、浏览器、设备或玩家证据。
- `CONTRACT_REACHABLE`：公共合同允许，但当前自然生产链没有入口；默认用最窄直接/合同反例保护fail-closed，不机械升级到浏览器或设备证明。
- `FUTURE_ONLY`：当前生产链与生命周期不可达，只属于规划中的未来能力；登记到未来任务或合同，不阻断当前候选。

可达性无法证明时先做只读调查并标`UNVERIFIED`。不能仅凭“理论上可能”启动重型实现、跨域范围或最终设备/玩家验证；证据成本应与实际可达性、影响和失败代价相称。

## 7. 外部工具、账号与发行状态

平台/发行任务必须把“本地文件变化”和“外部系统状态变化”分别记录：

1. 工具、SDK、引擎和安装包绑定官方来源、精确版本、下载时间、字节数、哈希；平台可提供签名时还要核验签名。
2. 下载目录、安装目录、缓存目录、项目工程和构建产物应分离，并记录空间上限、清理方式和可复用边界。
3. 许可协议、登录、账号绑定、AppID、团队角色、测试设备和上传版本都属于外部状态；任务卡必须写明授权范围、当前状态和负责人，治理文档不得保存密码、令牌或私钥。
4. 本地构建成功、测试版本可运行、审核通过和正式发布是不同阶段；不得用前一状态推定后一状态。
5. 候选工具链或引擎实验优先放在隔离、可回收的 PoC 工程中；进入生产导入图、改正式资产合同或迁移正式工程必须另过主控阶段门。
6. `AI-Workspace`是唯一Framework开发与发行仓，默认分支在`framework/versions/`保留全部稳定版本；`framework/CURRENT`只决定新项目默认版本。tag只作可选审计或下载标记，注册、恢复和升级不得依赖tag。版本进入STABLE即不可原位修改，热修一律发布新的patch版本；是否已被项目消费只影响保留或退休策略。删除退休版本或改变远端ref仍须单独授权。

## 8. Git 与并行写入

共享本地仓库默认不为每个会话创建分支或独立 index，以减少合并和切换成本：

1. 不同执行会话不得同时写同一文件；任务卡列出精确所有权。
2. 同一仓库同一时刻只允许一个Git收口者操作index/commit。任务卡可以条件预授权本地Git；条件满足后不再重复申请机械Git门。
3. 收口前检查`HEAD`、工作树、index和其他owner边界；只逐项暂存任务精确路径，脏工作树禁止`git add .`。
4. 不得覆盖、回退或纳入其他会话改动；不得用 `assume-unchanged`/`skip-worktree` 隐藏差异。
5. commit、push、发布、删除和回退是不同授权；提交不自动授权 push。

仅在文件所有权不可避免重叠、长周期实验、候选方案并行或主工作树必须保持可发布时使用 branch/worktree。分管必须先指定集成负责人和合并顺序。

## 9. 委派与独立性

可以把边界清楚、可独立验证且写入范围互斥的工作委派给临时执行者或辅助Agent。任务唯一owner仍是唯一调度者；总体方案、未批准取舍、强耦合核心逻辑、脏工作树整合和最终审核仍由负责角色承担。委派输出是证据输入，不自动成为事实。

执行载体按生命周期分两类：

- **当前turn内辅助执行**：单个owner turn内可完成、无外部等待，且owner必须在该turn综合结果。
- **独立任务上下文**：跨turn、预计返工、需要用户/阶段/Git等待、独立worktree、独立审计记录或直接沟通；完成、真实阻断、范围冲突或需新授权时主动回传。

具体会话、消息确认、等待、actor和notifier属于宿主适配，不是核心治理。宿主适配不得转移唯一owner、改变审核独立性或扩大范围、Git、阶段和外部权限；Codex使用同版本`HOST_ADAPTER_CODEX.md`。

完整交接只发送给任务owner一次。任务final、侧栏完成或进入idle不等于已回传；创建任务时必须写明回传对象和可用消息机制。

多个提示词角色由同一个模型在同一上下文中顺序模拟，不构成真正独立审核。独立性来自新上下文、独立取证、不同审核者和可复核证据，不来自角色名称。

任务owner可在任务卡冻结执行者、指定独立审核者、exact/contingency/forbidden范围、允许的范围内返工、Review轮次上限和停止条件后，预授权范围内直接审核闭环。该授权只减少owner逐轮转述，不转移owner或扩大任何角色权限。`RANGE_GATE_REQUIRED`、产品/跨域/owner/质量底线/权限冲突、同一发现复发或轮次上限必须立即停止并回owner；最终`APPROVED / BLOCKED`、稳定对象与残余风险回owner。消息时序和条件式确认由宿主适配定义。

任何宿主确认、复审消息或回传都不转移唯一owner或调度权。审核者仍无候选写入、范围、Git、阶段或外部动作权，执行者仍不能把审核意见当成新授权；只有档位或实际风险要求独立结论时，实质写入者才不得签发该独立批准。owner继续决定范围升级、Git收口和阶段结果。具体确认条件与消息时序只由宿主适配定义。

并行或多领域Review开始前，owner必须冻结同一candidate manifest，以及可独立定位的稳定内容对象或section identity、依赖manifest和验证上限；Review期间只有任务卡指定返工者可写候选。任务卡顶部状态、范围摘要、宿主扩展与执行、审核、Git、交接记录属于可识别的可变区，不应迫使审核结论机械绑定整张持续追加的热卡。

候选变化后先分类delta：内容、依赖、范围、权限或公共合同变化，重审受影响层；纯机械状态/审核记录或可证明的known-exact变化，只增量刷新变化对象及其有效键，未受影响批准继续有效。影响面、对象身份或manifest漂移无法证明，或出现owner、产品、权限、范围、质量底线变化时fail closed，执行完整相关审核；delta不得成为绕过独立审核的捷径。

## 10. 会话交接与关闭

- 接近上下文极限、长期停顿或换模型时，更新任务卡：完成项、实际差异、证据、验证、未完成、风险和下一条允许动作。
- 会话恢复使用两种模式，且都不依赖旧聊天摘要猜测：
  - `FULL_COLD_RECOVERY`：用于会话首次进入项目/角色、新长期角色会话、新独立会话的首个任务、恢复基线无法证明、角色/owner/项目身份/权限/保护边界不确定、Framework pin变化或影响面无法安全隔离、用户要求，或按需健康检查为`DEGRADED / FAIL`。从Bootstrap开始按职责完整读取固定Framework、项目权威、current和任务卡，并核对真实仓库。
  - `WARM_TASK_REBIND`：用于同一健康会话且恢复基线仍可证明时的新任务、同任务Review/返工、idle后唤醒或已知exact权威变化。只增量核对新任务卡、已变化权威、current/热索引、actual差异、真实`HEAD`/index、其他owner/保护边界、重新授予的权限和唯一下一动作。
- 恢复基线必须能从本会话已核验对象及当前增量证据证明：角色、项目ID、Framework版本与已知内容身份、项目权威/current、当前任务、权限和保护边界。它不是新权威、恢复报告或第二状态文件。
- 已知exact的权威变化可读取变化对象修复基线；影响面未知、对象身份无法证明或增量核对出现冲突时，立即升级`FULL_COLD_RECOVERY`。Review轮次、窄返工、任务final、idle或无变化唤醒本身不机械触发完整冷恢复。
- 温重绑不继承旧任务权限。每个新工作仍须重新确认唯一owner、exact/contingency/forbidden、Git/push/外部动作、保护边界与唯一下一动作；只有档位或实际风险需要审核角色时才确认审核人，复用独立审核者时仍须复证其未参与候选设计或实质写入。
- 被替换会话停止写入；稳定结论进入项目权威/项目资料，过程信息进入任务卡，历史原文只读归档。
- 老项目首次接入可做一次迁移；新项目不创建旧会话迁移流程。

项目不自动或定期压缩会话，也不把上下文占用比例交给AI猜测。只有用户准备判断是否轮换时，目标会话才按项目健康标准自检：能否从Bootstrap、权威、任务卡和真实仓库重新得出角色、范围、权限、保护边界和唯一下一动作，以及无关/冲突上下文是否已干扰判断。用户结合该质量结论与界面可见压缩情况决定继续、压缩或换会话。

## 11. 质量底线

- 搜索建立注意力地图，再按风险完整读取相关对象并复述“为什么”。
- `STANDARD / CRITICAL`先做与风险相称的pre-mortem；重构先确认安全网，新行为必须有直接覆盖。
- 公共概念只有一个权威来源；任务摘要只给指针。
- 修改需有机融入现有结构，检查重叠、冲突和整体自洽。
- 功能/契约变化同步受影响的权威文档、开发日志、任务状态和必要关系图；不做无关全面同步。
- 正式文档不引用临时聊天编号或临时方案作为权威依据。

## 12. 试点、证据复用与降本

- 流程、资源或工具试点沿用普通任务生命周期；建制时冻结待验证问题、自然样本、停止线、判定标准和候选权威落点。停止线到达后必须`KEEP / ADJUST / REJECT`，不能无限active或为凑样本制造任务。
- 1.3.2轻量分级的首轮观察只从10–20个自然关闭任务已有记录中提取准备耗时、恢复模式、审核角色数、返工、冲突/缺陷拦截和恢复耗时；允许缺失值，不增加每任务报表、第二流程、指标平台或为取样制造任务。到达样本停止线后在既有框架维护任务中裁决。
- `KEEP/ADJUST`把稳定规则写回既有框架、项目资料或正式权威；`REJECT`移除临时入口并保留拒绝理由。聊天总结不是落实。
- 重型证据绑定候选对象、依赖、fixture、工具链、环境和命令形成有效键；等价未漂移时可复用，相关输入漂移、阶段集成或无法证明等价时只重跑受影响门。
- 成本优化只减少同一证据的重复生产、读取、转述与等待，不减少必要的独立审核、直接行为覆盖、范围保护、运行/设备证据和用户取舍门。

## 13. repo-local项目控制面

Framework 1.4.0的新项目控制面位于项目Git根`.ai-workspace/`，布局名固定为`repo-local`。`project.json`使用`schemaVersion=2`、`controlPlaneLayout=repo-local`、`repositoryRoot=..`和固定`frameworkVersion`。项目资料、状态、关系、任务与报告随项目Git跟踪；Framework版本内容仍只来自已挂载`AI-Workspace/framework/versions/<pin>`，不得复制到项目仓或从`CURRENT`、tag、当前HEAD、网络猜历史内容。

发现顺序是公共合同：给定项目Git根时，先严格验证`.ai-workspace/project.json`与`BOOTSTRAP.md`；完整repo-local优先。只有repo-local完全不存在时才允许中央legacy `projects/<id>` fallback。repo-local partial、reparse、未知live bytes、ID/repository/pin冲突都fail closed。两者并存且身份一致时repo-local是入口，中央冻结只读；不得形成双写权威。

中央→repo-local不是普通upgrade，也不是Framework通用命令或跨仓事务能力。已有项目只能由项目owner另建一次性专属任务：在项目仓提交并完成repo-local冷恢复前，中央副本保持唯一权威；中央冻结和删除继续由后继授权控制。Framework的register只服务两处都不存在的全新项目，upgrade只服务同布局版本变更。

控制面文本严格UTF-8无BOM、无NUL/U+FFFD、只用LF并以LF结尾。路径拒绝绝对、`..`、ADS、保留名、尾随点/空格、大小写或Unicode规范化碰撞和reparse。register只有在固定文件/目录inventory与受管身份全部匹配时才返回`ALREADY_REGISTERED`；缺失、额外或未知live bytes一律`CONFLICT`并保留。upgrade清理前必须证明临时对象由本次流程创建且身份、schema、inventory与hash闭合；未知`.fwu-*`材料保留并停止。
